RESOLVED FIXED67030
Web Inspector: Debugger.setBreakpointByUrl should return error when setting breakpoint on the same location twice.
https://bugs.webkit.org/show_bug.cgi?id=67030
Summary Web Inspector: Debugger.setBreakpointByUrl should return error when setting b...
Pavel Podivilov
Reported 2011-08-26 04:07:08 PDT
Web Inspector: Debugger.setBreakpointByUrl should return error when setting breakpoint on the same location twice. Currently it just returns empty breakpointId without any error message which is confusing. Original request: http://code.google.com/p/chromium/issues/detail?id=87879.
Attachments
Patch (12.50 KB, patch)
2011-08-26 04:11 PDT, Pavel Podivilov
no flags
Patch (12.40 KB, patch)
2011-08-26 04:50 PDT, Pavel Podivilov
pfeldman: review+
Pavel Podivilov
Comment 1 2011-08-26 04:11:42 PDT
Pavel Podivilov
Comment 2 2011-08-26 04:12:57 PDT
* Add error message. * Add test that sets breakpoint in the same location twice. * Rename debugger-pause-on-breakpoint -> set-breakpoint.
WebKit Review Bot
Comment 3 2011-08-26 04:35:14 PDT
Comment on attachment 105344 [details] Patch Attachment 105344 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/9541010 New failing tests: inspector/debugger/set-breakpoint.html
Pavel Podivilov
Comment 4 2011-08-26 04:50:04 PDT
Pavel Podivilov
Comment 5 2011-08-29 01:54:04 PDT
Note You need to log in before you can comment on or make changes to this bug.