Web Inspector: Debugger.setBreakpointByUrl should return error when setting breakpoint on the same location twice. https://bugs.webkit.org/show_bug.cgi?id=67030

Reviewed by Pavel Feldman.

Source/WebCore:

Test: inspector/debugger/set-breakpoint.html

* inspector/InspectorDebuggerAgent.cpp:
(WebCore::InspectorDebuggerAgent::setBreakpointByUrl):

LayoutTests:

* inspector/debugger/set-breakpoint-expected.txt: Renamed from LayoutTests/inspector/debugger/debugger-pause-on-breakpoint-expected.txt.
* inspector/debugger/set-breakpoint.html: Renamed from LayoutTests/inspector/debugger/debugger-pause-on-breakpoint.html.

Canonical link: https://commits.webkit.org/82904@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93962 268f45cc-cd09-0410-ab3c-d52691b4dbfc